--- a/css/style.css
+++ b/css/style.css
@@ -54,23 +54,12 @@ li {
 }
 
 /* Header */
-
-.header {
-	height: 120px;
-
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	vertical-align: middle;
-}
-
 .header__nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 
-	width: 1519px;
+	height: 120px;
 }
 
 .header__logo {
@@ -297,12 +286,8 @@ li {
 
 .advantages--background-wrapper {
 	width: 100%;
-	background: url(../images/advantages1.svg) no-repeat 0 0,
-				url(../images/advantages2.svg) no-repeat 480px 0px,
-				url(../images/advantages3.svg) no-repeat 960px 0px;
-	background-size: 640px 820px,
-					640px 820px,
-					640px 820px;
+	background: url(../images/bg__advantages.svg);
+	background-size: 100%;
 }
 
 .advantages__list {
@@ -599,3 +584,104 @@ label[for='file'] {
 	font-size: 38px;
 }
 /* End of Footer */
+
+/* Start of ABOUT US page */
+
+.about-header {
+	box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14);
+}
+
+
+.about-us {
+	margin-left: 210px;
+}
+
+.about-us .small {
+	font-size: 13px;
+	color: rgba(22, 30, 60, 0.5);
+}
+
+.about-us .red {
+	color: #F50000
+}
+
+.about-us .big {
+	margin-bottom: 10px;
+}
+
+.about-us__h2 {
+	margin-top: 95px;
+	margin-bottom: 80px;
+
+	font-size: 44px;
+	font-weight: normal;
+	color: #161E3C;
+}
+
+.about-us__intro {
+	width: 870px;
+
+	font-size: 14px;
+	line-height: 1.9;
+}
+
+.about-us__units {
+	margin-top: 0px;
+	width: 870px;
+
+	padding: 0 150px;
+}
+
+.about-us__unit {
+	display: flex;
+	flex-direction: column;
+
+	height: 175px;
+	margin-bottom: 60px;
+}
+
+.about-us__unit:last-of-type {
+	margin-bottom: 100px;
+}
+
+.about-us__unit:first-of-type::before {
+	display: inline-block;
+	content: url(../images/leha.svg);
+
+	position: relative;
+	top: 150px;
+	left: -150px;
+}
+
+.about-us__unit:nth-of-type(2)::before {
+	display: inline-block;
+	content: url(../images/elchik.svg);
+
+	position: relative;
+	top: 150px;
+	left: -150px;
+}
+
+.about-us__unit:nth-of-type(3)::before {
+	display: inline-block;
+	content: url(../images/alina.svg);
+
+	position: relative;
+	top: 150px;
+	left: -150px;
+}
+
+.about-us__unit:last-of-type::before {
+	display: inline-block;
+	content: url(../images/galochka.svg);
+
+	position: relative;
+	top: 110px;
+	left: -150px;
+}
+
+.unit__description {
+	font-size: 14px;
+	line-height: 1.9;
+}
+/* End ABOUT US */
